--- a/public/assets/css/loginregister.css
+++ b/public/assets/css/loginregister.css
@@ -37,10 +37,10 @@ body {
 }
 
 .card , .card-body {
+    width: 50rem !important;
     border-color: var(--blue-900) !important;
     box-shadow: 0px 0px 30px var(--blue-400) !important;
-    border-radius: 10px;
-    
+    border-radius: 10px;    
 }
 
 .input-group-text {
