--- a/public/assets/css/loginregister.css
+++ b/public/assets/css/loginregister.css
@@ -37,7 +37,6 @@ body {
 }
 
 .card , .card-body {
-    width: 50rem !important;
     border-color: var(--blue-900) !important;
     box-shadow: 0px 0px 30px var(--blue-400) !important;
     border-radius: 10px;    
@@ -45,4 +44,8 @@ body {
 
 .input-group-text {
     background-color: transparent !important;
+}
+
+.login-page, .register-page {
+    align-self: center;
 }
