--- a/public/assets/css/cuentaeditar.css
+++ b/public/assets/css/cuentaeditar.css
@@ -51,18 +51,49 @@ textarea.form-control {
 }
 
 #foto {
+    position: relative;
+    display: inline-block;
     text-align: center;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+    width: fit-content; /* Ajusta el tamaño al de la imagen */
 }
 
 .foto-perfil {
     width: 8em;
     height: 8em;
+    display: block;
     cursor: pointer;
     border-radius: 50% !important;
 }
 
 .foto-perfil-label {
     cursor: pointer;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Película negra transparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    border-radius: 0.375rem; /* Coincide con las esquinas redondeadas de la imagen */
+}
+
+.image-container:hover .overlay {
+    opacity: 1;
 }
 
 .btn-success {
