--- a/public/assets/css/usuario.css
+++ b/public/assets/css/usuario.css
@@ -36,3 +36,45 @@
 .foto-perfil-label {
     cursor: pointer;
 }
+
+
+/* Publicación */
+.publicacion {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px 0;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.foto-perfil {
+    border-radius: 50%;
+    width: 30px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    margin-right: 10px;
+}
+
+.publicacion-body img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.publicacion p {
+    margin: 10px 0;
+    text-decoration: none !important;
+}
+
+.acciones a {
+    margin-right: 10px;
+    color: #333;
+    text-decoration: none;
+}
+
+.acciones i {
+    font-size: 20px;
+}
+
+.fecha {
+    align-self: end;
+}
