--- a/public/assets/css/loginregister.css
+++ b/public/assets/css/loginregister.css
@@ -8,45 +8,65 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 */
 
 :root {
-    --blue-50: #e8f1ff;
-    --blue-100: #d5e4ff;
-    --blue-200: #b3ccff;
-    --blue-300: #85a8ff;
-    --blue-400: #5676ff;
-    --blue-500: #2f45ff;
-    --blue-600: #0c0eff;
-    --blue-700: #0000ff;
-    --blue-800: #0609cd;
-    --blue-900: #10169f;
-    --blue-950: #0a0b5c;
+  --blue-50: #e8f1ff;
+  --blue-100: #d5e4ff;
+  --blue-200: #b3ccff;
+  --blue-300: #85a8ff;
+  --blue-400: #5676ff;
+  --blue-500: #2f45ff;
+  --blue-600: #0c0eff;
+  --blue-700: #0000ff;
+  --blue-800: #0609cd;
+  --blue-900: #10169f;
+  --blue-950: #0a0b5c;
 }
 
-body {    
-    /* background-image: url('../img/TravelMates.png');
+body {
+  /* background-image: url('../img/TravelMates.png');
     background-repeat: repeat;
     background-size: 5%; */
-    background-color: #e8f1ff;
-    opacity: 95%;
+  background-color: #e8f1ff;
+  opacity: 95%;
 }
 
-.login-logo a {
-    color: var(--blue-500) !important;
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
 }
 
-.login-logo b {
-    color: var(--blue-800) !important;
+.logo img {
+  width: 25%;
+  align-self: center;
+  justify-self: center;
 }
 
-.card , .card-body {
-    border-color: var(--blue-900) !important;
-    box-shadow: 0px 0px 30px var(--blue-400) !important;
-    border-radius: 10px;    
+.card,
+.card-body {
+  border-color: var(--blue-900) !important;
+  box-shadow: 0px 0px 20px rgba(86, 118, 255, 0.2) !important;
+  border-radius: 10px;
 }
 
 .input-group-text {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
 
-.login-page, .register-page {
-    align-self: center;
+.login-page,
+.register-page {
+  align-self: center;
+}
+
+.sugerencias {
+  border: 1px solid #ccc;
+  max-height: 150px;
+  overflow-y: auto;
+}
+.sugerencias-item {
+  padding: 8px;
+  cursor: pointer;
+}
+.sugerencias-item:hover {
+  background-color: #f0f0f0;
 }
