--- a/public/assets/css/cuentaeditar.css
+++ b/public/assets/css/cuentaeditar.css
@@ -24,6 +24,7 @@
 
 .form-group {
     text-align: left;
+    position: relative;
 }
 
 .form-group label {
@@ -109,3 +110,34 @@ textarea.form-control {
 .btn-success:hover {
     background-color: #218838;
 }
+
+.sugerencias {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-top: none;
+    max-height: 150px;
+    overflow-y: auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 0 0 10px 10px;
+  }
+  
+  .sugerencias-item {
+    padding: 12px 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-bottom: 1px solid #eaeaea;
+  }
+  
+  .sugerencias-item:last-child {
+    border-bottom: none;
+  }
+  
+  .sugerencias-item:hover {
+    background-color: #f0f0f0;
+    color: var(--blue-600);
+  }
